--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -1,5 +1,13 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4a.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4a.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4a.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4a.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4a.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4a.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4a.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4a.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/crlhi259/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/crlhi259/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801312.md#1" target="_blank">【持续更新】武汉肺炎速扩20省市 台首现1例</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801312.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1097066394-320x200.jpg" align ="left"></a>中国武汉去年12月爆发不明肺炎，今年1月8日确定为新型冠状病毒，世界卫生组织13日将此病毒定名为“2019新型冠状病毒”（2019－nCoV）。目前出现2例死亡病例，该新型冠状病毒已有扩散趋势，泰国和日本近日先后确诊个案，患者皆到过武汉。但在中国仍只有武汉有疫情消息。本文将持续更新关于武汉肺炎疫情的最新进展。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 10:21 PM	</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11810366.md#1" target="_blank">2019旧金山湾区房价 12月份销售一览（下）</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11810366.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/e1c61771aa8aa70954b535b2c23d7327-150x120.png" align ="left"></a>以下表格即是2019年12月份，湾区部分城市的房产销售一览。
+注：房型CO是康斗，DE是独立房
+
+
+
+资料来源：旧金山、南湾、东湾MLS
+以上数据由星河地产（Starriver Realty）房地产经纪Jason（Zhenhua）Tao（BRE：01869132）提供
+Jason Tao熟悉旧金山、湾区房.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 11:07 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809816.md#1" target="_blank">高端房市 有理由对2020乐观看待（下）</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809816.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15eaba50114b886a_ttl7dayqpY_shutterstock_530763871-150x120.jpg" align ="left"></a>编译：艾薇?大纪元
 去年世界各地的高端房市表现不佳，受到全球局势动荡的影响，产生经济衰退的忧虑，但所幸美股表现强劲，全球经济并无陷入泥沼。今年高端房市的表现依然会与世界政经事件产生紧密牵动，以下根据Mansion Global，针对2020年，主要城市的豪宅房市进行了展望：本周下篇表述伦敦、悉尼和迪拜的概况。
 伦敦.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 10:01 PM			</td></tr>
@@ -29,9 +37,6 @@
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806464.md#1" target="_blank">两名美国男子被拍到“吊车尾” 违法又危险</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806464.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-56025846-150x120.jpg" align ="left"></a>台湾人常以“吊车尾”来形容表现欠佳或成绩倒数第一。而在现实生活中，真的有人“吊车尾”。在美国马里兰州，最近就有两名年轻男子被发现吊在一辆公车后面，试图搭便车，此举不但违法，而且很危险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 1:41 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11789191.md#1" target="_blank">丈夫女儿车祸丧生 澳母亲二十年后仍自责</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11789191.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Kerry-150x120.jpg" align ="left"></a>20多年前，一场车祸夺去了诺顿（Kerry Norton）丈夫和女儿的生命。过去10多年来，作为维州道路创伤支持服务机构（RTSSV）志愿者，诺顿一直用自己的亲身经历告诫人们，一定要谨慎开车。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 10:58 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11791510.md#1" target="_blank">19年辛勤培育 澳果农收获首批无核荔枝</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11791510.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/lychee-3399362_1920-150x120.jpg" align ="left"></a>19年前，昆士兰北部果农迪克森（Tibby Dixon）花5,000澳元从中国购买了一株荔枝树，经过10多年的辛勤培育，他终于收获了澳洲第一批无核荔枝。据澳广新闻（ABC）报导，迪克森不仅培育出了无核荔枝，还培育出多个荔枝品种，并将幼苗出售给了其他果农种植。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 10:50 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805380.md#1" target="_blank">经典年菜料理 (1) ～软嫩多汁的红烧肉</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805380.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/f7cf1f5dfb490086f84a57e2de3af341-150x120.jpg" align ="left"></a>好媳妇就要学会这一道经典年菜料理，入口即化、软嫩多汁的红烧肉。
-让人忍不住饭一口接一口～
-炒糖色让红烧肉油亮亮吃起来香甜不死咸，带有淡淡的焦糖香，加入话梅更解腻。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 12:01 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809762.md#1" target="_blank">日本住友林业收购珀斯建商Scott Park</a><br></h3>日本跨国公司住友林业（Sumitomo Forestry）近日收购了珀斯最大建筑商之一斯科特帕克集团（Scott Park Group）的控股权。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 4:49 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809752.md#1" target="_blank">新加坡鸿运控股重建珀斯喜来登酒店</a><br></h3>一间新加坡上市房地产开发商提出了一项2.9亿澳元的提案，拟重新开发珀斯福朋喜来登酒店（Four Points by Sheraton Hotel），并在相邻街区建设2座包含公寓和写字间的新楼。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 4:46 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809592.md#1" target="_blank">珀斯AMP大楼锁定长期租户</a><br></h3>安保资本（AMP Capital）所拥有的圣乔治大道140号（140 St Georges Terrace）守住了4层租户，使该写字楼空置率下降至1%以下。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 3:45 PM			</td></tr>
